--- a/.github/workflows/launch-app.yaml
+++ b/.github/workflows/launch-app.yaml
@@ -26,4 +26,4 @@ jobs:
       uses: samuelmeuli/action-electron-builder@v1
       with:
         github_token: ${{ secrets.GH_TOKEN }}
-        release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+        release: ${{ startsWith(github.ref, 'refs/tags/') }}
