--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sc-obs-control-ls",
-  "displayName": "SC - OBS Conctorl LS - 1.0.0",
+  "displayName": "SC - OBS Conctorl LS",
   "version": "1.0.1",
   "description": "Conrola o obs studio via api websocket",
   "icon": "build/icon.png",
